@@ -70,6 +70,7 @@
 	  kahua-error-document
           kahua-version
 	  kahua-revision
+	  kahua-version-info
 
 	  ;; Site Bundle
 	  kahua-site-create
@@ -355,6 +356,10 @@
 (define (kahua-version) "##KAHUA_VERSION##")
 
 (define (kahua-revision) "##KAHUA_REVISION##")
+
+(define kahua-version-info
+  (let1 vinfo (format "~a (~a)" (kahua-version) (kahua-revision))
+    (lambda () vinfo)))
 
 ;; Site Bundle Facility
 
