@@ -1,5 +1,9 @@
 2008-05-15  Tatsuya BIZENN  <bizenn@arthub.net>
 
+	* Change: src/kahua/config.scm.in
+	  Add kahua-revision(get source code revision) and
+	  kahua-version-info(both version and revision).
+
 	* Change: DIST, Makefile.in, configure.ac, src/Makefile.in,
 	          src/kahua/config.scm.in
 	  Embed working copy revision in kahua.config module at the
